To merge with main

--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -49,27 +49,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "'c:\\\\Users\\\\shaul\\\\Documents\\\\GitHub\\\\academix-ydata-project\\\\code'"
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ],
+      "outputs": [],
       "source": [
         "C:\\Users\\shaul\\Documents\\GitHub\\academix-ydata-project\\code\\py_3\\sim_matrix_3.py"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -113,7 +110,7 @@
         "#DATA_PATH = DATA_PATH + \"labeled_data/\"\n",
         "FILE = \"enriched_labeled_dataset.json\""
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -142,7 +139,7 @@
         "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
         "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)"
       ],
-      "execution_count": 11
+      "execution_count": 10
     },
     {
       "cell_type": "markdown",
@@ -163,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -172,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -188,12 +185,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "29569306, 19490895"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "[[{'forename': 'Guolin',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'G',\n   'name': 'Ma, G',\n   'lastname': 'Ma'},\n  {'forename': 'Jindou',\n   'affiliation': 'Beijing Key Laboratory of Gene Resource and Molecular, Development, College of Life Sciences, Beijing Normal University, Beijing, 100875, China.',\n   'initials': 'J',\n   'name': 'Liu, J',\n   'lastname': 'Liu'},\n  {'forename': 'Yuepeng',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'Y',\n   'name': 'Ke, Y',\n   'lastname': 'Ke'},\n  {'forename': 'Xin',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'X',\n   'name': 'Liu, X',\n   'lastname': 'Liu'},\n  {'forename': 'Minyong',\n   'affiliation': 'Department of Medicinal Chemistry, Key Laboratory of Chemical Biology, School of Pharmacy, Shandong University, Jinan, Shandong, 250012, China.',\n   'initials': 'M',\n   'name': 'Li, M',\n   'lastname': 'Li'},\n  {'forename': 'Fen',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'F',\n   'name': 'Wang, F',\n   'lastname': 'Wang'},\n  {'forename': 'Gang',\n   'affiliation': 'Department of Biochemistry and Molecular Pharmacology, University of Massachusetts Medical School, Worcester, MA, 01605, USA.',\n   'initials': 'G',\n   'name': 'Han, G',\n   'lastname': 'Han'},\n  {'forename': 'Yun',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'Y',\n   'name': 'Huang, Y',\n   'lastname': 'Huang'},\n  {'forename': 'Youjun',\n   'affiliation': 'Beijing Key Laboratory of Gene Resource and Molecular, Development, College of Life Sciences, Beijing Normal University, Beijing, 100875, China.',\n   'initials': 'Y',\n   'name': 'Wang, Y',\n   'lastname': 'Wang'},\n  {'forename': 'Yubin',\n   'affiliation': 'Institute of Biosciences and Technology, College of Medicine, Texas A&M University, 2121 W Holcombe Blvd, Houston, TX, 77030, USA.',\n   'initials': 'Y',\n   'name': 'Zhou, Y',\n   'lastname': 'Zhou'}],\n [{'forename': 'Steven H',\n   'affiliation': 'Department of Biology, Duke University, Durham, NC 27708, USA.',\n   'initials': 'SH',\n   'name': 'Spoel, SH',\n   'lastname': 'Spoel'},\n  {'forename': 'Zhonglin',\n   'initials': 'Z',\n   'name': 'Mou, Z',\n   'lastname': 'Mou'},\n  {'forename': 'Yasuomi',\n   'initials': 'Y',\n   'name': 'Tada, Y',\n   'lastname': 'Tada'},\n  {'forename': 'Natalie W',\n   'initials': 'NW',\n   'name': 'Spivey, NW',\n   'lastname': 'Spivey'},\n  {'forename': 'Pascal',\n   'initials': 'P',\n   'name': 'Genschik, P',\n   'lastname': 'Genschik'},\n  {'forename': 'Xinnian',\n   'initials': 'X',\n   'name': 'Dong, X',\n   'lastname': 'Dong'}]]"
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
+      "source": [
+        "list(df[(df['pmid'] == 29569306) | (df['pmid'] == 19490895)].authors)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "       author      mesh  inst  email  country  forename  same_author  \\\n20637     0.0  0.176556  1.00    1.0      1.0       0.5            0   \n20682     0.0  0.004187  0.75    1.0      0.0       0.5            1   \n21222     0.0  0.000000  0.75    1.0      0.0       0.5            1   \n\n       same_name             pmid_both  \n20637          0  [30203285, 29569306]  \n20682          1  [30203285, 19490895]  \n21222          1  [29569306, 19490895]  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>author</th>\n      <th>mesh</th>\n      <th>inst</th>\n      <th>email</th>\n      <th>country</th>\n      <th>forename</th>\n      <th>same_author</th>\n      <th>same_name</th>\n      <th>pmid_both</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>20637</th>\n      <td>0.0</td>\n      <td>0.176556</td>\n      <td>1.00</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.5</td>\n      <td>0</td>\n      <td>0</td>\n      <td>[30203285, 29569306]</td>\n    </tr>\n    <tr>\n      <th>20682</th>\n      <td>0.0</td>\n      <td>0.004187</td>\n      <td>0.75</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.5</td>\n      <td>1</td>\n      <td>1</td>\n      <td>[30203285, 19490895]</td>\n    </tr>\n    <tr>\n      <th>21222</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.75</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.5</td>\n      <td>1</td>\n      <td>1</td>\n      <td>[29569306, 19490895]</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
+      "source": [
         "### DEMO - REMOVE COUNTRY ###\n",
-        "#df_core = df_core.drop(columns=\"country\",inplace=False)"
+        "#df_core = df_core.drop(columns=\"country\",inplace=False)\n",
+        "df_core[df_core['forename'] == .5]"
       ]
     },
     {
