--- a/code/1_Getting_Labeled_Data.ipynb
+++ b/code/1_Getting_Labeled_Data.ipynb
@@ -58,7 +58,6 @@
         "\n",
         "import pandas as pd\n",
         "sys.path.append('./code')\n",
-        "import s3_functions\n",
         "import zipfile, glob, sys\n",
         "\n",
         "INPUT_PATH = \"data/labeled_dataset/source_files/\"\n",
@@ -70,13 +69,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eIJe_bmId-yY",
+        "id": "DkVpFOkMtxEF",
         "colab_type": "code",
-        "outputId": "36944959-330a-413c-8bcb-1a72f2eb7471",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 35
+        },
+        "outputId": "ee778f03-f8b8-46ed-cdd4-853e689468b9"
+      },
+      "source": [
+        "cd .."
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/AYP\n"
+          ],
+          "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eIJe_bmId-yY",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# import os\n",
@@ -91,20 +111,12 @@
         "# os.system(cmd_string)\n",
         "# cmd_string, password = \"\", \"\" # removing the password from the variable\n",
         "\n",
-        "# %cd /content/AYP"
+        "# %cd /content/AYP\n",
+        "\n",
+        "import utils\n"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User name: ShaulSolomon\n",
-            "Password: ··········\n",
-            "/content/AYP\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -137,20 +149,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d3FIfCZPsCzz",
+        "id": "qSEOunKdjE8f",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Unzip all the files within the local folder\n",
-        "\n",
-        "extension = \".zip\"\n",
-        "\n",
-        "for item in os.listdir(INPUT_PATH): # loop through items in dir\n",
-        "    if item.endswith(extension): # check for \".zip\" extension\n",
-        "        zip_ref = zipfile.ZipFile(INPUT_PATH + item) # create zipfile object\n",
-        "        zip_ref.extractall(INPUT_PATH) # extract file to dir\n",
-        "        zip_ref.close() # close file"
+        "ROOT = \"/content/AYP\"\n",
+        "INPUT_PATH = \"/data/source_files_zip/\"\n",
+        "OUTPUT_PATH = \"/data/source_files/\"\n",
+        "FINAL_PATH = \"/data/combined_files/\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -158,19 +165,64 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0VulUjqzsa8X",
+        "id": "d3FIfCZPsCzz",
         "colab_type": "code",
-        "outputId": "0f8df680-b728-4d8c-9ceb-5adcfb755118",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 629
+          "height": 225
+        },
+        "outputId": "a1a3a7ed-abf9-4cc1-8ddc-d04577715d3f"
+      },
+      "source": [
+        "# Unzip all the files within the local folder\n",
+        "\n",
+        "extension = \".zip\"\n",
+        "\n",
+        "for item in os.listdir(ROOT + INPUT_PATH): # loop through items in dir\n",
+        "    if item.endswith(extension): # check for \".zip\" extension\n",
+        "      print(ROOT + INPUT_PATH + item)\n",
+        "      zip_ref = zipfile.ZipFile(ROOT + INPUT_PATH + item) # create zipfile object\n",
+        "      zip_ref.extractall(ROOT + OUTPUT_PATH) # extract file to dir\n",
+        "      zip_ref.close() # close file"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2009.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2016.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2018.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLNK_2014.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLINK_2018.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLINK_2015.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLNK_2017.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLINK_2009.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2015.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2014.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PUBLNK_2016.zip\n",
+            "/content/AYP/data/source_files_zip/NIH_PRJ_2017.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0VulUjqzsa8X",
+        "colab_type": "code",
+        "outputId": "230a701e-7505-4b82-aca5-95a1f99320c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
         }
       },
       "source": [
         "#Iterating through the unzipped files, combine them into a single dataframe and then merge them.\n",
         "\n",
-        "link_files = glob.glob(INPUT_PATH + \"RePORTER_PUBLNK_C_20*.csv\")\n",
-        "prj_files = glob.glob(INPUT_PATH + \"RePORTER_PRJ_C_FY20*.csv\")\n",
+        "link_files = glob.glob(ROOT + OUTPUT_PATH + \"RePORTER_PUBLNK_C_20*.csv\")\n",
+        "prj_files = glob.glob(ROOT + OUTPUT_PATH + \"RePORTER_PRJ_C_FY20*.csv\")\n",
         "\n",
         "lf=[]\n",
         "prjf = []\n",
@@ -199,20 +251,20 @@
         "df = pd.merge(lf_total, prjf_total, how='inner', on ='PROJECT_NUMBER')\n",
         "print(df.head(10))\n",
         "\n",
-        "df.to_csv(OUTPUT_PATH + 'NIH_precleaning.csv',encoding='utf-8')"
+        "df.to_csv(ROOT + FINAL_PATH + 'NIH_precleaning_large.csv',encoding='utf-8')"
       ],
-      "execution_count": 17,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "loading PUBLINK files...\n",
             "       PMID PROJECT_NUMBER\n",
-            "0  25782559    U01CI000333\n",
-            "1  26267390    R01DA007031\n",
-            "2  26359696    UL1TR000448\n",
-            "3  26547523    R01HS017939\n",
-            "4  26547523    R01LM010031\n",
+            "0  19415686    ZIAAR041131\n",
+            "1  19387461    ZIADK054511\n",
+            "2  19936044    ZIAAI000361\n",
+            "3  19783984    ZIANS002945\n",
+            "4  19281132    ZIAES102225\n",
             "\n",
             "----------------------\n",
             "\n",
@@ -229,23 +281,38 @@
             "----------------------\n",
             "\n",
             "merging the dataframes...\n",
-            "       PMID PROJECT_NUMBER  ...     PI_IDS                    PI_NAMEs\n",
-            "0  25782559    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "1  19803722    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "2  19335165    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "3  26267390    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
-            "4  26267390    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
-            "5  30280443    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
-            "6  30280443    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
-            "7  28013420    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
-            "8  28013420    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
-            "9  27350097    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
-            "\n",
-            "[10 rows x 6 columns]\n"
+            "       PMID PROJECT_NUMBER    FY ORG_STATE     PI_IDS          PI_NAMEs\n",
+            "0  19415686    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "1  19650110    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "2  19283731    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "3  19274753    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "4  19479830    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "5  19597468    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "6  19107653    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "7  19170141    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "8  19415687    ZIAAR041131  2009       NaN   1858712;    TUAN, ROCKY S;\n",
+            "9  19387461    ZIADK054511  2014       NaN  9415738;   LIANG, T. JAKE ;\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KKMvFCmGvQrH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_pmid = df[\"PMID\"]\n",
+        "df_pmid.to_csv(ROOT + FINAL_PATH + 'author_list_large.csv', encoding='utf-8')\n",
+        "f = open(ROOT + FINAL_PATH + 'author_list_large.csv', 'r+')\n",
+        "utils.upload_to_s3(file = f, key = \"author_list_large.csv\")\n",
+        "f.close()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -255,8 +322,8 @@
         "colab": {}
       },
       "source": [
-        "f = open(OUTPUT_PATH + 'NIH_precleaning.csv', 'r+')\n",
-        "s3_functions.upload_to_s3(file = f,key = \"NIH_precleaning.csv\")\n",
+        "f = open(ROOT + FINAL_PATH + 'NIH_precleaning_large.csv', 'r+')\n",
+        "utils.upload_to_s3(file = f,key = \"NIH_precleaning_large.csv\")\n",
         "f.close()"
       ],
       "execution_count": 0,
