redid for larger database

--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -55,10 +55,10 @@
       "metadata": {
         "id": "72UixsP-uoMa",
         "colab_type": "code",
-        "outputId": "b8e8492c-b35f-4d88-f1f2-c7c0d7f35839",
+        "outputId": "4569ba15-090f-4ce8-8119-52665ccb70eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 69
         }
       },
       "source": [
@@ -102,12 +102,26 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "#sys.path.append('./code/')\n",
-        "import s3_functions\n",
+        "import utils\n",
         "\n",
-        "PATH = \"data/labeled_dataset/source_files/\"\n",
-        "FILE = 'NIH_precleaning.csv'\n",
+        "PATH = \"data/labeled_dataset/\"\n",
+        "FILE = 'NIH_precleaning_large.csv'\n",
         "OUT_PATH = \"data/labeled_dataset/\"\n",
-        "OUT_FILE = 'NIH_postcleaning.csv'"
+        "OUT_FILE = 'NIH_postcleaning_large.csv'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wt5Ca_dNyOnp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%load_ext autoreload\n",
+        "%autoreload 2"
       ],
       "execution_count": 0,
       "outputs": []
@@ -117,11 +131,11 @@
       "metadata": {
         "id": "0tH6oPdvvHHf",
         "colab_type": "code",
+        "outputId": "0237dfe1-3ae3-4b60-ee10-d95b43ebda01",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "87257c1a-fba7-4867-a77e-6ccbb848c506"
+          "height": 52
+        }
       },
       "source": [
         "if os.path.exists(PATH + FILE):\n",
@@ -130,16 +144,17 @@
         "    df.drop('Unnamed: 0',axis=1, inplace=True)\n",
         "else:\n",
         "    print(\"Getting File from S3...\")\n",
-        "    df = s3_functions.get_dataframe_from_s3(file=FILE)\n",
+        "    df = utils.get_dataframe_from_s3(file=FILE)\n",
         "    df.drop('Unnamed: 0',axis=1, inplace=True)\n",
         "print(\"File recieved\")"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Getting File from S3...\n"
+            "Getting File from S3...\n",
+            "File recieved\n"
           ],
           "name": "stdout"
         }
@@ -148,32 +163,43 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kvn13nX31vTl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cd .."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4loiBND98HfO",
         "colab_type": "code",
-        "outputId": "f48e1aca-b1d2-4cb3-a0c2-4759258618be",
+        "outputId": "a152b323-f461-492b-e3eb-537c8c695dc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 170
+          "height": 139
         }
       },
       "source": [
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "       PMID PROJECT_NUMBER  ...     PI_IDS                    PI_NAMEs\n",
-            "0  25782559    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "1  19803722    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "2  19335165    U01CI000333  ...   1946136;        FRASER, VICTORIA J.;\n",
-            "3  26267390    R01DA007031  ...  3105734;   LEMERY-CHALFANT, KATHRYN ;\n",
-            "4  26267390    R01DA007031  ...   1870683;          DISHION, THOMAS J;\n",
-            "\n",
-            "[5 rows x 6 columns]\n",
-            "(5273791, 6)\n"
+            "       PMID PROJECT_NUMBER    FY ORG_STATE    PI_IDS        PI_NAMEs\n",
+            "0  19415686    ZIAAR041131  2009       NaN  1858712;  TUAN, ROCKY S;\n",
+            "1  19650110    ZIAAR041131  2009       NaN  1858712;  TUAN, ROCKY S;\n",
+            "2  19283731    ZIAAR041131  2009       NaN  1858712;  TUAN, ROCKY S;\n",
+            "3  19274753    ZIAAR041131  2009       NaN  1858712;  TUAN, ROCKY S;\n",
+            "4  19479830    ZIAAR041131  2009       NaN  1858712;  TUAN, ROCKY S;\n",
+            "(22172394, 6)\n"
           ],
           "name": "stdout"
         }
@@ -400,16 +426,16 @@
       "metadata": {
         "id": "uopDp1FDpVrk",
         "colab_type": "code",
-        "outputId": "71108897-1389-42d8-c519-a24de71550e9",
+        "outputId": "841e2b31-8fee-4d26-eb67-ceb64ecf3e43",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
         "np.any(merged_df.duplicated())"
       ],
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -421,7 +447,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 21
         }
       ]
     },
@@ -459,21 +485,8 @@
       "source": [
         "merged_df.to_csv(OUT_PATH + OUT_FILE)\n",
         "file = open(OUT_PATH + OUT_FILE, 'r+', encoding='utf-8')\n",
-        "s3_functions.upload_to_s3(file=file,key = OUT_FILE)\n",
+        "utils.upload_to_s3(file=file,key = OUT_FILE)\n",
         "file.close()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GPdaPQGJmyCi",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
