Larger database had some weird values - fixed.

--- a/code/1_clean_NIH_dataset.ipynb
+++ b/code/1_clean_NIH_dataset.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "72UixsP-uoMa",
         "colab_type": "code",
-        "outputId": "4569ba15-090f-4ce8-8119-52665ccb70eb",
+        "outputId": "81841dca-0661-4aab-d1db-f9cceaa2938f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "0tH6oPdvvHHf",
         "colab_type": "code",
-        "outputId": "0237dfe1-3ae3-4b60-ee10-d95b43ebda01",
+        "outputId": "2368511f-d3fe-42e4-b137-fe0cd42ef516",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -148,7 +148,7 @@
         "    df.drop('Unnamed: 0',axis=1, inplace=True)\n",
         "print(\"File recieved\")"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,20 +165,32 @@
       "metadata": {
         "id": "kvn13nX31vTl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c871e00a-2a16-4fcd-fb9b-69a37798e91a"
       },
       "source": [
         "cd .."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/content/AYP\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4loiBND98HfO",
         "colab_type": "code",
-        "outputId": "a152b323-f461-492b-e3eb-537c8c695dc2",
+        "outputId": "0433f310-2a97-4e03-e4ee-3f62178b5b50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -188,7 +200,7 @@
         "print(df.head())\n",
         "print(df.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,6 +313,104 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "syOElsxKWWVG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "f341f865-1c7a-4943-cbd0-0bf3ef036e6f"
+      },
+      "source": [
+        "df.head(3)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PMID</th>\n",
+              "      <th>PROJECT_NUMBER</th>\n",
+              "      <th>FY</th>\n",
+              "      <th>ORG_STATE</th>\n",
+              "      <th>PI_IDS</th>\n",
+              "      <th>PI_NAMEs</th>\n",
+              "      <th>cleaned_name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>19415686</td>\n",
+              "      <td>ZIAAR041131</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1858712;</td>\n",
+              "      <td>TUAN, ROCKY S;</td>\n",
+              "      <td>Tuan! RS</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>19650110</td>\n",
+              "      <td>ZIAAR041131</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1858712;</td>\n",
+              "      <td>TUAN, ROCKY S;</td>\n",
+              "      <td>Tuan! RS</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>19283731</td>\n",
+              "      <td>ZIAAR041131</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1858712;</td>\n",
+              "      <td>TUAN, ROCKY S;</td>\n",
+              "      <td>Tuan! RS</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       PMID PROJECT_NUMBER    FY  ...    PI_IDS        PI_NAMEs cleaned_name\n",
+              "0  19415686    ZIAAR041131  2009  ...  1858712;  TUAN, ROCKY S;     Tuan! RS\n",
+              "1  19650110    ZIAAR041131  2009  ...  1858712;  TUAN, ROCKY S;     Tuan! RS\n",
+              "2  19283731    ZIAAR041131  2009  ...  1858712;  TUAN, ROCKY S;     Tuan! RS\n",
+              "\n",
+              "[3 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5bGb8mLh1r7L",
         "colab_type": "code",
         "colab": {}
@@ -330,6 +440,104 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3uoLxS7ZWjM5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "82c35bf6-fbc9-4585-8e86-44877afa318d"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PMID</th>\n",
+              "      <th>PROJECT_NUMBER</th>\n",
+              "      <th>FY</th>\n",
+              "      <th>ORG_STATE</th>\n",
+              "      <th>PI_IDS</th>\n",
+              "      <th>PI_NAMEs</th>\n",
+              "      <th>cleaned_name</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1866</th>\n",
+              "      <td>19515209</td>\n",
+              "      <td>T32CA009461</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>NY</td>\n",
+              "      <td>1894031;</td>\n",
+              "      <td>OSTROFF, JAMIE S;</td>\n",
+              "      <td>Ostroff! JS</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1872</th>\n",
+              "      <td>19365164</td>\n",
+              "      <td>T32CA009461</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>NY</td>\n",
+              "      <td>1894031;</td>\n",
+              "      <td>OSTROFF, JAMIE S;</td>\n",
+              "      <td>Ostroff! JS</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1878</th>\n",
+              "      <td>19778994</td>\n",
+              "      <td>T32CA009461</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>NY</td>\n",
+              "      <td>1894031;</td>\n",
+              "      <td>OSTROFF, JAMIE S;</td>\n",
+              "      <td>Ostroff! JS</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          PMID PROJECT_NUMBER    FY  ...    PI_IDS           PI_NAMEs cleaned_name\n",
+              "1866  19515209    T32CA009461  2018  ...  1894031;  OSTROFF, JAMIE S;  Ostroff! JS\n",
+              "1872  19365164    T32CA009461  2018  ...  1894031;  OSTROFF, JAMIE S;  Ostroff! JS\n",
+              "1878  19778994    T32CA009461  2018  ...  1894031;  OSTROFF, JAMIE S;  Ostroff! JS\n",
+              "\n",
+              "[3 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -426,7 +634,7 @@
       "metadata": {
         "id": "uopDp1FDpVrk",
         "colab_type": "code",
-        "outputId": "841e2b31-8fee-4d26-eb67-ceb64ecf3e43",
+        "outputId": "0c5f7468-0990-4aa5-c005-878ca72b06d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -435,7 +643,7 @@
       "source": [
         "np.any(merged_df.duplicated())"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +655,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 19
         }
       ]
     },
@@ -464,6 +672,84 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SAkSXWj3XYlo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "merged_df = merged_df[merged_df['PI_IDS'] != '']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O6APLOpYW2qv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "b806338c-b267-414b-ca0f-0d05e13f97a8"
+      },
+      "source": [
+        "merged_df['PI_IDS'] = [int(pi) for pi in merged_df['PI_IDS']]"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lc6EGbqgXsaF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 208
+        },
+        "outputId": "0e0d667b-83bd-4c46-c97e-d4c16c4796ca"
+      },
+      "source": [
+        "merged_df.info()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 4484728 entries, 0 to 22172391\n",
+            "Data columns (total 4 columns):\n",
+            " #   Column        Dtype \n",
+            "---  ------        ----- \n",
+            " 0   PMID          int64 \n",
+            " 1   ORG_STATE     object\n",
+            " 2   PI_IDS        int64 \n",
+            " 3   cleaned_name  object\n",
+            "dtypes: int64(2), object(2)\n",
+            "memory usage: 171.1+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -483,8 +769,8 @@
         "colab": {}
       },
       "source": [
-        "merged_df.to_csv(OUT_PATH + OUT_FILE)\n",
-        "file = open(OUT_PATH + OUT_FILE, 'r+', encoding='utf-8')\n",
+        "merged_df.to_csv(OUT_FILE)\n",
+        "file = open(OUT_FILE, 'r+', encoding='utf-8')\n",
         "utils.upload_to_s3(file=file,key = OUT_FILE)\n",
         "file.close()"
       ],
