edit yuval's code

--- a/code/3_Logisitic_Regression_Model_run_yuval.ipynb
+++ b/code/3_Logisitic_Regression_Model_run_yuval.ipynb
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -153,16 +153,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "module 'py_3.sim_matrix_3' has no attribute 'base_authors'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-1405048c9a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_core\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_matrix_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_authors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muse_case\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"base_da\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'py_3.sim_matrix_3' has no attribute 'base_authors'"
+          ]
+        }
+      ],
       "source": [
         "df_core = sim_matrix_3.base_authors(df,use_case = \"base_da\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_core=df[df.last_author_name=='Tu, Y']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -171,22 +192,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
-          "text": "Running Yuval's DBscan\n\nComparing Authors\n\n  0%|          | 0/500 [00:00<?, ?it/s]Comparing Mesh\n\n100%|██████████| 500/500 [02:52<00:00,  2.96it/s]\nComparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n 0     66\n 12    38\n-1     30\n 8     28\n 63    18\n       ..\n 28     2\n 19     2\n 20     2\n 27     2\n 43     2\nName: cluster, Length: 66, dtype: int64\nFor this clustering, N=500\n30 instances, or 6.0 percent, were clustered as noise\ntop cluster is 13.200000000000001 percent of the total\nhandled 500 papers\niteration time: 0.0001480579376220703\n"
+          "name": "stderr",
+          "text": "0%|          | 0/13 [00:00<?, ?it/s]Running Yuval's DBscan\n\nComparing Authors\n\nComparing Mesh\n\n100%|██████████| 13/13 [00:00<00:00, 87.50it/s]Comparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n 1    7\n 0    5\n-1    1\nName: cluster, dtype: int64\nFor this clustering, N=13\n1 instances, or 7.6923076923076925 percent, were clustered as noise\ntop cluster is 53.84615384615385 percent of the total\nhandled 13 papers\niteration time: 0.00022029876708984375\n\n"
         }
       ],
       "source": [
-        "clusters_df=yuval_dbscan.run_db_scan(df_core[:500])"
+        "clusters_df=yuval_dbscan.run_db_scan(df_core)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -195,13 +216,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Number of clusters (DBS): 66\nNumber of unique authors: 92\nPrecision score: 0.8180771929824562, Recall score: 0.796\n                 1 cluster(s)  2 cluster(s)  15 cluster(s)\nmis_integration            46            17            1.0\nmis_separation             75            17            NaN\n"
+          "text": "Number of clusters (DBS): 3\nNumber of unique authors: 2\nPrecision score: 1.0, Recall score: 0.9230769230769231\n                 1 cluster(s)  2 cluster(s)\nmis_integration             1             1\nmis_separation              1             1\n"
+        }
+      ],
+      "source": [
+        "df_eval = metric_eval_2.get_metrics(clusters_df,verbose=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-16-4f5df513abc3>, line 1)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-4f5df513abc3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [ 0.1   0.11 -0.02 -0.04 -0.14 -0.1 ]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
+      "source": [
+        "[ 0.1   0.11 -0.02 -0.04 -0.14 -0.1 ]\n",
+        "author, mesh, inst, email, country, forename"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Running Yuval's DBscan\n\n100%|██████████| 13/13 [00:00<00:00, 84.49it/s]Comparing Authors\n\nComparing Mesh\n\nComparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n-1    13\nName: cluster, dtype: int64\nFor this clustering, N=13\n13 instances, or 100.0 percent, were clustered as noise\ntop cluster is 100.0 percent of the total\nhandled 13 papers\niteration time: 0.00023865699768066406\n\n"
+        }
+      ],
+      "source": [
+        "clusters_df=yuval_dbscan.run_db_scan(df_core, \n",
+        "                                            eps=0.5,  \n",
+        "                                            gammas={\n",
+        "                                                    \"author\":0.1,\n",
+        "                                                    \"mesh\":0.11,\n",
+        "                                                    \"inst\":-0.02,\n",
+        "                                                    \"email\":-0.04,\n",
+        "                                                    \"country\":-0.14,\n",
+        "                                                    \"forename\":-0.1 })"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clusters_df=metric_eval_2.assign_labels_to_clusters(clusters_df,clusters_df.cluster_pred.unique())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Number of clusters (DBS): 1\nNumber of unique authors: 2\nPrecision score: 1.0, Recall score: 1.0\n                 1 cluster(s)\nmis_integration             1\nmis_separation              2\n"
         }
       ],
       "source": [
